--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,3 +1,7 @@
+/*** BEGIN set homepage wallpaper ***/
+
+
+
 @-moz-document url(about:home), url(about:newtab), url(about:privatebrowsing) {
     .click-target-container *, .top-sites-list * {
         color: #fff !important ;
@@ -22,3 +26,10 @@
         height: 100vh ;
     }
 }
+/*** END Set homepage wallpaper ***/
+
+/*** BEGIN Hide scrollbar ***/
+html {
+    scrollbar-width: none;
+ }
+/*** END Hide scrollbar ***/
