--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -62,17 +62,79 @@
     }
 /*** END Auto hide/show tab bar and address bar on mouse hover ***/
 
-/*** BEGIN Limit toolbox height and enable scroll to access toolbox ***/
-  /* Hide the tab bar automatically, leave a 10 pixel high bar for the mouse to trigger, also for consistency, make all elements of the navigator toolbox transparent */
+/*** BEGIN Limit toolbox height and disable scroll to access toolbox ***/
+  /* Hide the tab bar automatically, disable scrolling on the part of the toolbar that is visible (28 px) and setup so that ctrl + L toggles the full height of the toolbar*/
   #navigator-toolbox {
     max-height: 28px ;
-    overflow: scroll !important;
+    overflow: hidden !important;
+    /* overflow: scroll !important; */
     scrollbar-width: none !important;
+    margin-top: -3px !important;
+ 
+  }
+  #navigator-toolbox:focus-within
+  {
+    max-height:100vh;
+    animation: 0s none;
+    animation-fill-mode: both;
+    animation-delay: 5s;
+    opacity: 1!important;
     
   }
 
-/*** END Limit toolbox height and enable scroll to access toolbox ***/
+  @keyframes pop-in {
+    from {overflow: hidden}
+    to {overflow: unset}
+  }
 
-html {
-  scrollbar-width: none;
+
+
+/*** END Limit toolbox height and disable scroll to access toolbox ***/
+
+
+
+/*** START Ultra Compact Mode enlargement***/
+:root {
+  /* Appmenu: Reduce item padding */
+  --arrowpanel-menuitem-padding-block: 4px 8px !important;
+  /* Tabbar: reduce tab margin */
+  --tab-block-margin: 4px 3px !important;
+}
+
+/* Tab: Reduce height */
+.tabbrowser-tab {
+  min-height: 24px !important;
+}
+
+/* URLBar: Fix vertical alignment */
+#urlbar[breakout=true]:not([open="true"]) {
+	--urlbar-height: 20px !important;
+	--urlbar-toolbar-height: 24px !important;
+}
+
+/* Toolbar: Reduce spacing */
+#urlbar-container {
+	--urlbar-container-height: 30px !important;
+  margin-top: 0 !important;
+}
+
+/* Reload Button: Fix vertical alignment */
+#reload-button {
+	margin-block-start: -2px !important;
+}
+/*** END Ultra Compact Mode ***/
+
+/* removes the rounded corners from menus */
+@-moz-document url-prefix(chrome://browser/content/){
+  .panel-arrowcontent,
+  #alltabs-popup .arrowscrollbox-scrollbox,
+  menupopup:not(#BMB_bookmarksPopup),
+  .textbox-contextmenu{
+    border-radius: 0px !important;
+  }
+}
+
+/* Reduce left spacer on tab bar */
+.titlebar-spacer[type="pre-tabs"] {
+  display: none !important;
 }
