--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -79,13 +79,12 @@
     animation-fill-mode: both;
     animation-delay: 5s;
     opacity: 1!important;
-    
+    max-height: 65px !important;
   }
-
-  @keyframes pop-in {
-    from {overflow: hidden}
-    to {overflow: unset}
+  .titlebar-spacer {
+    display: none !important;
   }
+  
 
 
 
@@ -93,191 +92,3 @@
 
 
 
-/*** START Ultra Compact Mode enlargement***/
-:root {
-  /* Appmenu: Reduce item padding */
-  --arrowpanel-menuitem-padding-block: 4px 8px !important;
-  /* Tabbar: reduce tab margin */
-  --tab-block-margin: 4px 3px !important;
-}
-
-/* Tab: Reduce height */
-.tabbrowser-tab {
-  min-height: 24px !important;
-}
-
-/* URLBar: Fix vertical alignment */
-#urlbar[breakout=true]:not([open="true"]) {
-	--urlbar-height: 20px !important;
-	--urlbar-toolbar-height: 24px !important;
-}
-
-/* Toolbar: Reduce spacing */
-#urlbar-container {
-	--urlbar-container-height: 30px !important;
-  margin-top: 0 !important;
-}
-
-/* Reload Button: Fix vertical alignment */
-#reload-button {
-	margin-block-start: -2px !important;
-}
-/*** END Ultra Compact Mode ***/
-
-/* removes the rounded corners from menus */
-@-moz-document url-prefix(chrome://browser/content/){
-  .panel-arrowcontent,
-  #alltabs-popup .arrowscrollbox-scrollbox,
-  menupopup:not(#BMB_bookmarksPopup),
-  .textbox-contextmenu{
-    border-radius: 0px !important;
-  }
-}
-
-/* Reduce left spacer on tab bar */
-.titlebar-spacer[type="pre-tabs"] {
-  display: none !important;
-}
-@namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
-
-toolbarbutton#alltabs-button {
-    -moz-binding: url("userChrome.xml#js");
-}
-
-
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/window_control_placeholder_support.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* Creates placeholders for window controls */
-/* This is a supporting file used by other stylesheets */
-
-/* This stylesheet is pretty much unnecessary if window titlebar is enabled */
-
-/* This file should preferably be imported before other stylesheets */
-
-/* Defaults for window controls on RIGHT side of the window */
-/* Modify these values to match your preferences */
-:root[tabsintitlebar]{
-  --uc-window-control-width: 138px; /* Space reserved for window controls */
-  --uc-window-drag-space-width: 24px; /* Extra space reserved on both sides of the nav-bar to be able to drag the window */
-}
-:root[sizemode="fullscreen"] .titlebar-buttonbox-container{ display: none !important }
-:root[sizemode="fullscreen"] #window-controls{
-  position: fixed;
-  display: flex;
-  top: 0;
-  right:0;
-  height: 40px;
-}
-:root[uidensity="compact"][sizemode="fullscreen"] #window-controls{ height: 32px }
-#nav-bar{
-  border-inline: var(--uc-window-drag-space-width,0px) solid var(--toolbar-bgcolor);
-  border-inline-style: solid !important;
-  border-right-width: calc(var(--uc-window-control-width,0px) + var(--uc-window-drag-space-width,0px));
-}
-
-/* Use this pref to check Mac OS where window controls are on left */
-/* This pref defaults to true on Mac and doesn't actually do anything on other platforms. So if your system has window controls on LEFT side you can set the pref to true */
-@supports -moz-bool-pref("layout.css.osx-font-smoothing.enabled"){
-  :root{ --uc-window-control-width: 72px; }
-  :root[tabsintitlebar="true"]:not([inFullscreen]) #nav-bar{
-    border-inline-width: calc(var(--uc-window-control-width,0px) + var(--uc-window-drag-space-width,0px)) var(--uc-window-drag-space-width,0px)
-  }
-}
-
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/navbar_tabs_oneliner_menu_buttons_on_right.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* Variation of oneliner where menubutton and overflow button are next to window controls (if window controls are on right side) */
-
-/* IMPORTANT */
-/*
-Get window_control_placeholder_support.css
-Window controls will be all wrong without it
-*/
-
-:root[uidensity="compact"]{
-  --tab-block-margin: 2px !important;
-  --proton-tab-block-margin: 2px !important;
-}
-
-/* Modify these to change relative widths or default height */
-#navigator-toolbox{
-  --uc-navigationbar-width: 50vh;
-  --uc-toolbar-height: 29px;
-  
-}
-@media (-moz-proton){
-  #scrollbutton-up,#scrollbutton-down{ border-block-width: 2px !important; }
-}
-/* reserved space for overflow + menu buttons */
-#navigator-toolbox{--uc-buttons-width: calc(56px + 4 * var(--toolbarbutton-outer-padding) + var(--uc-menubutton-padding,6px))}
-#nav-bar:not([overflowing]) > #nav-bar-customization-target{ --uc-buttons-width: calc(28px + 2 * var(--toolbarbutton-outer-padding) + 6px) }
-/* Override for other densities */
-:root[uidensity="compact"] #navigator-toolbox{
-  --uc-toolbar-height: 29px;
-  --uc-menubutton-padding: 0px;
-}
-:root[uidensity="touch"] #navigator-toolbox{ --uc-toolbar-height: 44px; }
-
-:root[uidensity="compact"] #urlbar-container{
-  --urlbar-container-height: var(--uc-toolbar-height) !important;
-  padding-block: 0 !important;
-}
-:root[uidensity="compact"] #urlbar{
-  --urlbar-toolbar-height: var(--uc-toolbar-height) !important;
-}
-
-/* prevent urlbar overflow on narrow windows */
-/* Dependent on how many items are in navigation toolbar ADJUST AS NEEDED */
-@media screen and (max-width: 1000px){
-  #urlbar-container{ min-width:unset !important }
-}
-
-#TabsToolbar{
-  margin-left: var(--uc-navigationbar-width);
-  --tabs-navbar-shadow-size: 0px;
-}
-
-#tabbrowser-tabs{
-  --tab-min-height: calc(var(--uc-toolbar-height) - 2 * var(--tab-block-margin,0px)) !important;
-}
-/* Need to set background color for selected tab so it can be distinguished from background */
-#TabsToolbar .tab-background[selected]{
-  background: var(--lwt-selected-tab-background-color,rgba(0,0,0,0.2)) !important;
-}
-
-#TabsToolbar[brighttext] .tab-background[selected]{
-  background: var(--lwt-selected-tab-background-color,rgba(255,255,255,0.2)) !important;
-}
-
-/* This isn't useful when tabs start in the middle of the window */
-.titlebar-placeholder[type="pre-tabs"],.titlebar-spacer[type="pre-tabs"]{ width:8px !important}
-#nav-bar{ margin-top: calc(0px - var(--uc-toolbar-height)); }
-
-#nav-bar-customization-target{ margin-right: calc(100vw - (var(--uc-navigationbar-width)) - var(--uc-window-control-width) - var(--uc-buttons-width) - var(--uc-window-drag-space-width)) }
-
-@supports -moz-bool-pref("layout.css.osx-font-smoothing.enabled"){
-  .titlebar-buttonbox-container{ position: fixed; display: blocK; left: 0px; z-index: 3; }
-  #nav-bar-customization-target{ margin-right: calc(100vw - (var(--uc-navigationbar-width)) - var(--uc-buttons-width) - var(--uc-window-drag-space-width)) }
-}
-
-#TabsToolbar > .toolbar-items{
-  position: relative !important;
-  z-index: 2
-}
-.titlebar-placeholder[type="post-tabs"],
-.titlebar-spacer[type="post-tabs"]{
-  width: calc(var(--uc-buttons-width) + var(--uc-window-drag-space-width)) !important;
-}
-#PanelUI-button,#nav-bar-overflow-button{
-  margin: 0px !important;
-  border: 0px !important;
-  position: relative;
-  z-index: 3;
-}
-/* 1px margin on touch density causes tabs to be too high */
-.tab-close-button{ margin-top: 0 !important }
-
-/* Hide dropdown placeholder */
-#urlbar-container:not(:hover) .urlbar-history-dropmarker{ margin-inline-start: -28px; }
