--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -3,14 +3,14 @@
   /* Compute new position, width, and padding */
 
   #urlbar[breakout][breakout-extend] {
-    top: 5px !important;
+    top: 6px !important;
     left: 0px !important;
     width: 100% !important;
-    padding: -1px !important;
+    padding: 0px !important;
   }
   /* for alternate Density settings */
   [uidensity="compact"] #urlbar[breakout][breakout-extend] {
-    top: 4px !important; /* Push the address bar down so that it looks a bit neater when typing */
+    top: 6px !important; /* Push the address bar down so that it looks a bit neater when typing */
   }
   [uidensity="touch"] #urlbar[breakout][breakout-extend] {
     top: 4px !important;
@@ -79,7 +79,8 @@
     animation-fill-mode: both;
     animation-delay: 5s;
     opacity: 1!important;
-    max-height: 65px !important;
+    overflow: revert !important;
+    max-height: 62px !important;
   }
   .titlebar-spacer {
     display: none !important;
