--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -138,4 +138,4 @@ menupopup > menu, menupopup > menuitem {
  #TabsToolbar {height: var(--tab-min-height) !important;}
  #PersonalToolbar {height: 25px !important;}
 
-/** END Bring back old looks **/
+/** END Bring back old looks
