--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -212,11 +212,11 @@
   /* For a rounded button design, uncomment both lines in .titlebar-buttonbox. */
   .titlebar-buttonbox {
       z-index:3 !important;
-      /* padding-right:3px; */
+      padding-right:3px;
   }
 
   .titlebar-buttonbox * {
-      /* border-radius: 5px; */
+      border-radius: 5px;
       width:35px;
       height:38px;
   }
@@ -361,35 +361,7 @@
 }
 
 
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/window_control_fallback_for_custom_windows_theme.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
 
-/* If one uses custom Windows theme, then Firefox uses high-contrast window control buttons. This style makes Firefox fall back to using normal window control style. */
-
-/* .titlebar-button{
-  background-color: transparent !important;
-  -moz-context-properties: stroke !important;
-  stroke: currentColor !important;
-}
-.titlebar-button:hover{ background-color: hsla(0,0%,100%,.32) !important }
-.titlebar-close:hover{ background-color: hsl(355,86%,49%) !important }
-
-.titlebar-close{ list-style-image: url(chrome://browser/skin/window-controls/close.svg) !important }
-.titlebar-min{ list-style-image: url(chrome://browser/skin/window-controls/minimize.svg) !important }
-.titlebar-max{ list-style-image: url(chrome://browser/skin/window-controls/maximize.svg) !important }
-.titlebar-restore{ list-style-image: url(chrome://browser/skin/window-controls/restore.svg) !important }
-
-
-/* This is the "Search with" indicator on the urlbar */
-/* #urlbar-search-mode-indicator { display: none !important } */
-
-
-
-/* remove maximum/minimum width restriction of sidebar */
-#sidebar {
-  max-width: none !important;
-  min-width: 0px !important;
-}
 
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/window_control_fallback_for_custom_windows_theme.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
@@ -414,4 +386,59 @@ See the above repository for updates as well as full license text. */
 /* align bar text */ 
 #urlbar .urlbar-input-box {
   text-align: center !important; 
+}
+
+
+
+
+
+:root {
+  --sidebar-hover-width: 52px;
+  --sidebar-visible-width: 320px;
+}
+
+#sidebar-header{ display: none }
+
+
+
+
+#sidebar-box {
+  --bar-width: 30px;
+  position: relative !important;
+  overflow-x: hidden !important;
+  /* margin-right: calc(10px * -1) !important; */
+  /* left: var(--bar-width) !important; */
+  min-width: var(--bar-width) !important;
+  max-width: var(--bar-width) !important;
+  border-right: 1px solid var(--sidebar-border-color);
+  z-index: 1;
+  transition: all 0.1s;
+}
+
+#sidebar-box:hover {
+  --expanded-width: 250px;
+  margin-right: calc(
+    calc(var(--expanded-width) - var(--bar-width)) * -1
+  ) !important;
+  /* left: var(--expanded-width) !important; */
+  min-width: var(--expanded-width) !important;
+  max-width: var(--expanded-width) !important;
+}
+
+#sidebar-box:hover #sidebar-header {
+  min-width: var(--expanded-width) !important;
+  max-width: var(--expanded-width) !important;
+}
+
+
+/* #sidebar-header is hidden by default, change "none" to "inherit" to restore it. */
+#sidebar-header {
+  min-width: var(--bar-width) !important;
+  max-width: var(--bar-width) !important;
+  overflow: hidden !important;
+}
+
+/* #sidebar-splitter styles the divider between the sidebar and the rest of the browser. */
+#sidebar-splitter {
+  display: none;
 }
