--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -21,7 +21,7 @@
         top: 0 ;
         left: 0 ;
        
-        background: #f9a no-repeat url(img/Firefox.jpg)center ;
+        background: #f9a no-repeat url(img/Firefox.jpg) top ;
         background-size: cover ;
         width: 100vw ;
         height: 100vh ;
